kubernetes/talos/apps/flux-system/add-ons/webhooks/github/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webhook-receiver
spec:
  ingressClassName: public
  rules:
    - host: &host "flux-receiver.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /hook/
            pathType: Prefix
            backend:
              service:
                name: webhook-receiver
                port:
                  number: 80
  tls: [hosts: [*host]]
